@@ -3,11 +3,15 @@ package org.fiteagle.north.sfa.am.renew;
 import com.hp.hpl.jena.rdf.model.*;
 import com.hp.hpl.jena.vocabulary.OWL;
 import com.hp.hpl.jena.vocabulary.RDF;
+
 import info.openmultinet.ontology.vocabulary.Omn;
+
 import org.fiteagle.api.core.IConfig;
 import org.fiteagle.api.core.IMessageBus;
 import org.fiteagle.api.core.MessageBusOntologyModel;
 import org.fiteagle.api.core.MessageUtil;
+import org.fiteagle.north.sfa.ISFA;
+import org.fiteagle.north.sfa.am.ISFA_AM;
 import org.fiteagle.north.sfa.am.common.AbstractMethodProcessor;
 import org.fiteagle.north.sfa.exceptions.BadArgumentsException;
 import org.fiteagle.north.sfa.exceptions.SearchFailedException;
@@ -19,6 +23,7 @@ import java.text.ParsePosition;
 import java.text.SimpleDateFormat;
 import java.util.Calendar;
 import java.util.Date;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -27,31 +32,35 @@ import java.util.Map;
  */
 public class RenewHandler extends AbstractMethodProcessor {
 
+  private String expirationTime;
 
-    public Model renew(List<URN> urnList, String expirationTime, Map<String, Object> options) throws UnsupportedEncodingException {
-        if(urnList == null || urnList.isEmpty()){
+    public RenewHandler(List<?> parameter) {
+      this.parameter = parameter;
+    }
+    
+    public Model renew() throws UnsupportedEncodingException {
+        Map<String, Object> options = new HashMap<>();
+        if(this.urns == null || this.urns.isEmpty()){
             throw  new BadArgumentsException("No URN provided");
         }
-        if(expirationTime == null){
-            throw  new BadArgumentsException("No expiration date provided");
-        }
+        
         ParsePosition parsePos = new ParsePosition(0);
-        Date expirationDate = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ssXXX").parse(expirationTime,parsePos);
+        Date expirationDate = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ssXXX").parse(this.expirationTime,parsePos);
         if(expirationDate == null || new Date().after(expirationDate)){
             throw new BadArgumentsException("Wrong Expiration Date");
         }
 
-        Model result = getExistingSlivers(urnList);
+        Model result = getExistingSlivers();
 
         if(result.isEmpty()){
             throw new SearchFailedException("No resources found for provided sliver URNS");
         }
-        Model finalResult = renewSlivers(expirationTime, result);
+        Model finalResult = renewSlivers(result);
         return finalResult;
 
     }
 
-    private Model renewSlivers(String expirationTime, Model result) {
+    private Model renewSlivers(Model result) {
         Model requestModel2 = ModelFactory.createDefaultModel();
 
         ResIterator resIterator = result.listSubjectsWithProperty(Omn.isReservationOf);
@@ -62,7 +71,7 @@ public class RenewHandler extends AbstractMethodProcessor {
             Statement endTimeStatement = reservation.getProperty(MessageBusOntologyModel.endTime);
             Property endTime = endTimeStatement.getPredicate();
 
-            Statement newEndTime = endTimeStatement.changeObject(expirationTime);
+            Statement newEndTime = endTimeStatement.changeObject(this.expirationTime);
 
             requestModel2.add(newEndTime);
             requestModel2.add(reservation,RDF.type,Omn.Reservation);
@@ -75,20 +84,37 @@ public class RenewHandler extends AbstractMethodProcessor {
         return getSender().sendRDFRequest(serializedModel2,IMessageBus.TYPE_CONFIGURE,IMessageBus.TARGET_RESERVATION);
     }
 
-    private Model getExistingSlivers(List<URN> urnList) throws UnsupportedEncodingException {
+    private Model getExistingSlivers() throws UnsupportedEncodingException {
         Model requestModel = ModelFactory.createDefaultModel();
 
-        for(URN urn:urnList){
-            if(urn.getType().equalsIgnoreCase("sliver")){
-                Resource resource = requestModel.createResource(URLDecoder.decode(urn.getSubject(), "UTF-8"));
+        for(URN urn:this.urns){
+            if(ISFA_AM.Sliver.equals(urn.getType())){
+                Resource resource = requestModel.createResource(URLDecoder.decode(urn.getSubject(), ISFA_AM.UTF_8));
                 resource.addProperty(RDF.type, Omn.Resource);
 
-            }else if(urn.getType().equalsIgnoreCase("slice")){
+            }else if(ISFA_AM.SLICE.equals(urn.getType())){
                 Resource resource = requestModel.createResource(IConfig.TOPOLOGY_NAMESPACE_VALUE + urn.getSubject());
                 resource.addProperty(RDF.type, Omn.Topology);
             }
         }
         String serializedModel = MessageUtil.serializeModel(requestModel, IMessageBus.SERIALIZATION_TURTLE);
         return getSender().sendRDFRequest(serializedModel, IMessageBus.TYPE_GET, IMessageBus.TARGET_RESERVATION);
+    }
+    
+    public void parseExpirationTime(){
+//      if(parameter.get(2) == null){
+//        throw new BadArgumentsException("No expiration date provided");
+//      }
+      this.expirationTime = (String) this.parameter.get(2);
+      if(expirationTime == null || expirationTime.isEmpty()){
+        throw new BadArgumentsException("No expiration date provided");
+      }
+    }
+    
+    public void createResponse(final HashMap<String, Object> result, Model renewResponse) {
+      List<Map<String, Object>> slivers = getSlivers(renewResponse);
+      result.put(ISFA_AM.VALUE,slivers );
+      this.addCode(result);
+      this.addOutput(result);
     }
 }
